# agentic_crewai

sports_agent/: .gitignore  README.md  app.yaml  databricks.yml  pyproject.toml  requirements.txt
sports_agent/output/: output.md
sports_agent/resources/: f1_analyzer_app.yml
sports_agent/src/sports_agent/: app.py  crew.py  main.py
sports_agent/src/sports_agent/agents/: agents.py  tasks.py
sports_agent/src/sports_agent/config/: agents.yaml  tasks.yaml
sports_agent/src/sports_agent/tools/: custom_tool.py
